--- a/six/src/App.scss
+++ b/six/src/App.scss
@@ -1,188 +1,163 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@700;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap');
 
 body {
   margin: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+    Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #dfe2ff;
+  background-color: #eff0f1;
 }
 
 * {
   box-sizing: border-box;
-  font-family: 'Inter', sans-serif;
-  outline: none;
 }
 
 .App {
-  width: 400px;
-  height: 600px;
-  margin: 50px auto;
+  padding: 30px;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+h1 {
+  font-family: 'Merriweather', serif;
+  text-align: center;
+}
+
+.tags {
+  list-style: none;
+  padding: 0;
+
+  li {
+    display: inline-block;
+    padding: 12px 18px;
+    background-color: #fff;
+    border-radius: 10px;
+    margin-right: 10px;
+    cursor: pointer;
+    font-weight: 500;
+    font-size: 18px;
+    border: 1px solid transparent;
+    transition: all 0.15s ease-in-out;
+
+    &:hover {
+      border-color: #000;
+    }
+
+    &.active {
+      background-color: #000;
+      color: #fff;
+    }
+  }
+}
+
+.content {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 30px;
+  grid-row-gap: 30px;
+  margin-top: 40px;
+
+  @media (max-width: 1000px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media (max-width: 600px) {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+.collection {
+  max-width: 470px;
   background-color: #fff;
+  padding: 30px;
   border-radius: 30px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
-  padding: 40px;
-}
+  box-shadow: 0 3px 0 rgba(0, 0, 0, 0.05);
+  cursor: pointer;
+  transition: all 0.15s ease-in-out;
 
-.search {
-  position: relative;
+  h4 {
+    margin: 0;
+    margin-top: 15px;
+    font-size: 20px;
+    font-family: 'Merriweather', serif;
+  }
 
-  input {
-    border: 1px solid rgba(0, 0, 0, 0.08);
-    padding: 15px;
-    border-radius: 15px;
+  &:hover {
+    box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
+    transform: translateY(-5px);
+  }
+
+  @media (max-width: 1000px) {
     width: 100%;
-    font-size: 16px;
-    padding-left: 50px;
   }
 
-  svg {
-    width: 18px;
-    height: 18px;
-    position: absolute;
-    top: 17px;
-    left: 20px;
-    opacity: 0.3;
+  img {
+    object-fit: cover;
+  }
+
+  &__big {
+    height: 250px;
+    width: 100%;
+    border-radius: 20px;
+    margin-bottom: 15px;
+  }
+
+  &__bottom {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__mini {
+    width: 31%;
+    height: 80px;
+    border-radius: 20px;
   }
 }
 
-.users-list {
+.top {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.search-input {
+  font-size: 16px;
+  width: 250px;
+  height: 50px;
+  padding: 0 15px;
+  border-radius: 10px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  outline: none;
+  transition: all 0.15s ease-in-out;
+
+  &:focus {
+    border: 1px solid rgba(0, 0, 0, 0.4);
+  }
+}
+
+.pagination {
   list-style: none;
   padding: 0;
   margin: 0;
-  overflow: auto;
-  height: calc(100% - 130px);
-  margin-top: 25px;
-  margin-bottom: 20px;
+  margin-top: 40px;
+  display: flex;
+  justify-content: center;
 
   li {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 15px;
+    display: inline-block;
+    padding: 10px 17px;
+    background-color: white;
+    font-size: 18px;
+    border-radius: 10px;
+    margin-right: 15px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    cursor: pointer;
 
-    & > div {
-      display: flex;
+    &.active {
+      background-color: black;
+      color: #fff;
     }
-
-    img.avatar {
-      border-radius: 30px;
-      width: 50px;
-      height: 50px;
-      margin-right: 15px;
-    }
-
-    .action {
-      width: 28px;
-      height: 28px;
-      opacity: 0.3;
-      cursor: pointer;
-
-      &:hover {
-        opacity: 0.8;
-      }
-    }
-
-    h3 {
-      margin: 0;
-      font-weight: 900;
-      font-family: 'Merriweather', serif;
-      margin-left: 15px;
-      margin-top: 5px;
-      margin-left: 0;
-      color: #182170;
-    }
-
-    p {
-      display: flex;
-      align-items: center;
-      font-size: 14px;
-      margin: 0;
-      color: rgba(0, 0, 0, 0.5);
-      margin-top: 3px;
-
-      svg {
-        width: 16px;
-        height: 16px;
-        margin-right: 4px;
-
-        path {
-          fill: rgba(0, 0, 0, 0.2);
-        }
-      }
-    }
-  }
-}
-
-.send-invite-btn {
-  background-color: rgb(251, 80, 0);
-  padding: 16px 15px;
-  border-radius: 15px;
-  font-size: 16px;
-  color: #fff;
-  width: 100%;
-  border: 0;
-  outline: none;
-  box-shadow: 0 7px 10px rgba(251, 80, 0, 0.4);
-  cursor: pointer;
-  transition: all 0.1s ease-in-out;
-
-  &:hover {
-    background-color: rgb(255, 97, 24);
-  }
-
-  &:active {
-    transform: translateY(2px);
-    box-shadow: none;
-  }
-}
-
-.success-block {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  flex-direction: column;
-  animation: success-show 0.5s cubic-bezier(0.25, 0.75, 0.5, 1.25);
-
-  img {
-    width: 120px;
-    height: 120px;
-  }
-
-  h3 {
-    font-size: 24px;
-    margin-bottom: 0;
-    margin-top: 10px;
-  }
-
-  p {
-    text-align: center;
-    margin-bottom: 30px;
-  }
-
-  button {
-    width: 200px;
-  }
-}
-
-.skeleton-list {
-  height: calc(100% - 130px);
-  margin-top: 30px;
-
-  svg {
-    margin-bottom: 15px;
-  }
-}
-
-@keyframes success-show {
-  0% {
-    opacity: 0;
-    transform: scale(0.8);
-  }
-
-  100% {
-    opacity: 1;
-    transform: scale(1);
   }
 }
